Fixed scrollbar and removed notify travel events

--- a/app/assets/stylesheets/pages/jil.scss
+++ b/app/assets/stylesheets/pages/jil.scss
@@ -313,6 +313,25 @@ $faded-compl: rgba($base-complementary, 0.6);
     overflow: auto;
     padding: 5px;
 
+    &::-webkit-scrollbar {
+      height: 4px;
+      width: 4px;
+      background: $blue-d3;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: darken(lime, 25%);
+      border-radius: 1ex;
+      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+
+      &:hover { background: darken(lime, 15%); }
+      &:active { background: darken(lime, 5%); }
+    }
+
+    &::-webkit-scrollbar-corner {
+      background: $blue-d4;
+    }
+
     code {
       display: block;
       position: relative;
